[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/projectiles/wizzard/magic_spell.gd" type="Script" id=1]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/13.png" type="Texture" id=2]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/12.png" type="Texture" id=3]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/11.png" type="Texture" id=4]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/1.png" type="Texture" id=5]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/14.png" type="Texture" id=6]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/2.png" type="Texture" id=7]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/4.png" type="Texture" id=8]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/3.png" type="Texture" id=9]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/7.png" type="Texture" id=10]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/9.png" type="Texture" id=11]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/5.png" type="Texture" id=12]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/10.png" type="Texture" id=13]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/0.png" type="Texture" id=14]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/8.png" type="Texture" id=15]
[ext_resource path="res://assets/projectiles/wizzard/basic_lighting/6.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 36.0
} ]

[node name="MagicSpell" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
